<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background1"
    android:gravity="center"
    android:layout_margin="5px"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFEB3B"
        android:text="@string/txtdangnhap"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/edttk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_baseline_account_circle_24"
        android:ems="10"
        android:hint="@string/hinttaikhoan"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="#D86B48"
        android:textColorHint="@color/black" />

    <EditText
        android:id="@+id/edtmk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:ems="10"
        android:hint="@string/hintmatkhau"
        android:minHeight="48dp"
        android:textColor="#D86B48"
        android:textColorHint="@color/black" />

    <Button
        android:id="@+id/btndn"
        android:layout_width="124dp"
        android:layout_height="wrap_content"
        android:layout_margin="5px"
        android:background="#FFEB3B"

        android:text="@string/btndangnhap"
        android:textColor="#000000"
        android:textColorHint="#FFFFFF" />


    <Button
        android:id="@+id/btndk"
        android:layout_width="124dp"
        android:layout_height="wrap_content"
        android:layout_margin="5px"
        android:background="#FFEB3B"
        android:text="@string/btndangki"
        android:textColor="#000000"
        android:textColorHint="#FFFFFF" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imganh"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="50px"
            app:srcCompat="@drawable/anh" />

        <ImageView
            android:id="@+id/imgvietnam"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="50px"
            app:srcCompat="@drawable/vietnam" />

    </LinearLayout>

    <TextView
        android:id="@+id/txtchao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:text="@string/txtchao" />

    <TextView
        android:id="@+id/txt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt1"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/txt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt2"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/txtchitiet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300px"
        android:text="@string/txtchitet" />

</LinearLayout>