<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background1"
    >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_gravity="center"
        android:background="#FFEB3B"
        android:gravity="center"
        android:text="@string/txtdangki"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"/>

    <EditText
        android:id="@+id/edttendangnhap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hinttaikhoan"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="#000000"
        android:textColorHint="#000000" />

    <EditText
        android:id="@+id/edtmatkhau"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintmatkhau"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="#000000"
        android:textColorHint="#000000" />

    <Button
        android:id="@+id/btndangki"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#FFEB3B"
        android:text="@string/btndangki"
        android:textColor="#000000"
        android:textColorHint="#FFFFFF" />

    <Button
        android:id="@+id/btnhuy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFEB3B"
        android:text="@string/btnhuy"
        android:textColor="@color/black"
        android:textColorHint="#FFFFFF" />

</LinearLayout>