<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background1"
    tools:context=".Student1">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="367dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/btncoban"
                android:textSize="25dp" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/btnpt"
                android:textSize="25dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="367dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/btnham"
                android:textSize="25dp" />

            <Button
                android:id="@+id/btn4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/btnkhac"
                android:textSize="25dp" />
        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabadd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="16dp"

        android:layout_marginBottom="28dp"
        android:backgroundTint="#FFC107"
        android:clickable="true"
        android:focusable="true"
        android:tint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_add"
        tools:ignore="SpeakableTextPresentCheck" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabuser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_gravity="bottom|end"
        android:backgroundTint="#FFC107"
        android:clickable="true"
        android:focusable="true"
        android:visibility="invisible"
        android:tint="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/fabadd"
        app:layout_constraintEnd_toEndOf="@+id/fabadd"
        app:srcCompat="@drawable/ic_baseline_account_circle_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabsetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#FFC107"
        android:clickable="true"
        android:focusable="true"
        android:visibility="invisible"
        android:tint="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/fabuser"
        app:layout_constraintEnd_toEndOf="@+id/fabuser"
        app:srcCompat="@drawable/ic_setting" />
</androidx.constraintlayout.widget.ConstraintLayout>
